<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">qeovr</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="isconnected">Is connected?</string>
    <string name="record">Start Record</string>
    <string name="play">Play Sound</string>
    <string name="upload">Upload File</string>
    <string name="ip_address">ip address</string>
    <string name="checkserver">CheckServer</string>
</resources>
