<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
    android:id="@+id/ipaddress"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:hint="@string/ip_address"
    android:inputType="text"
    android:imeOptions="actionSend" />
    
     <TextView
        android:id="@+id/tvIsConnected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"    
        android:background="#FF0000"
        android:textColor="#FFF"
        android:textSize="18sp"
        android:layout_marginBottom="5dp"
        android:text="@string/isconnected" />
    
     <TextView
        android:id="@+id/etResponse"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:ems="10"
        android:layout_marginTop="10dp"
        />
     <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="#ff8D8D8D"
	    android:layout_marginTop="5dp"
	    android:padding="5dp"
	    android:layout_weight="0"
	    android:gravity="center">
	    
	     <Button android:text="@string/record"
         android:id="@+id/recordButton"
         android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         
         />
     
          <Button android:text="@string/play"
         android:id="@+id/playButton"
         android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         
         />
        </LinearLayout>   

	<LinearLayout
	
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical" >
          
	    <Button android:text="@string/checkserver"
         android:id="@+id/checkButton"
         android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         
         />

         <Button android:text="@string/upload"
         android:id="@+id/uploadButton"
         android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         
         />

	</LinearLayout>
</LinearLayout>